[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cvxpy>=1.7.1",
    "hmmlearn>=0.3.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pywavelets>=1.8.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.0",
    "streamlit>=1.47.0",
    "tensorflow>=2.14.0",
    "xgboost>=3.0.2",
    "yfinance>=0.2.65",
]
